# RepLDM

./: .gitignore  README.md  pipeline_repldm_sdxl_controlnet.py  pyproject.toml
AttentionGuidance/: __init__.py  attention_guidance.py
InferCases/RepLDM/SDXL/: t2i_generate_images.ipynb
InferCases/RepLDM/SDXL/text2image/: generate_images.ipynb  infer_imgs.py
InferencePipelines/: __init__.py
InferencePipelines/FreeScale/: pipeline_freescale_sdxl.py  scale_attention.py
InferencePipelines/RepLDM/: pipeline_repldm_sdxl.py  pipeline_repldm_sdxl_controlnet.py
